tests/content-scanning/page-analysis/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|           zig build --release=fast            |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*


[scripty] path must be relative, use the appropriate builtin if necessary
parse.smd:144:1: 
    []($link.page('/other'))  //wrong
    ^^^^^^^^^^^^^^^^^^^^^^^

[scripty] '.' and '..' are not allowed in paths, use the appropriate builtin instead
parse.smd:147:1: 
    []($link.page('./other')) //wrong
    ^^^^^^^^^^^^^^^^^^^^^^^^
index.smd:5:1: error: missing site asset
|    []($image.siteAsset('doesntexist.jpg')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

index.smd:11:1: error: unknown alternative
|    []($link.alternative('doesntexist-alternative')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

index.smd:23:1: error: unknown page
|    []($link.page('doesntexist')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

index.smd:26:1: error: unknown alternative
|    []($link.page('other').alternative('doesntexist')) // wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

index.smd:29:1: error: missing site asset
|    ![](/bad.jpg) //wrong
|    ^^^^^^^^^^^^

index.smd:30:1: error: missing page asset
|    ![](./bad.jpg) //wrong
|    ^^^^^^^^^^^^^

index.smd:31:1: error: missing page asset
|    ![](bad.jpg) // wrong
|    ^^^^^^^^^^^

code.smd:11:1: error: unknown language code
|    ```zig++
|    ^^^^^^^^

code.smd:16:1: error: unknown language code
|    [](<$code.siteAsset('code.zig').language('zig++')>) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



 ----- EXIT CODE: 1 -----
